--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="sidebar sidebargo">
             <nav>
                 <ul>
-                    <li><a href="/" class="active">Home</a></li>
-                    <li><a href="/about.html"> About Me</a></li>
-                    <li><a href="/skills.html"> Works/Projects</a></li>
-                    <li><a href="/contact.html"> Contact Me</a></li>
+                    <li><a href="/Portfolio/" class="active">Home</a></li>
+                    <li><a href="/Portfolio/about.html"> About Me</a></li>
+                    <li><a href="/Portfolio/skills.html"> Works/Projects</a></li>
+                    <li><a href="/Portfolio/contact.html"> Contact Me</a></li>
                 </ul>
             </nav>
         </div>
