--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
         <div class="sidebar sidebargo">
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html" class="active"> About Me</a></li>
-                    <li><a href="/skills.html"> Works/Projects</a></li>
-                    <li><a href="/contact.html"> Contact Me</a></li>
+                    <li><a href="/Portfolio/">Home</a></li>
+                    <li><a href="/Portfolio/about.html" class="active"> About Me</a></li>
+                    <li><a href="/Portfolio/skills.html"> Works/Projects</a></li>
+                    <li><a href="/Portfolio/contact.html"> Contact Me</a></li>
                 </ul>
             </nav>
         </div>
